# -ProjectHabitTracker

./: .env.docker  .env.example  docker-compose.yml  habits_fixture.json  pyproject.toml  users_fixture.json
.github/workflows/: cl.yaml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
habits/tests/: test_tasks.py  test_views.py
users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: add_habits.py  add_users.py
users/migrations/: 0001_initial.py
